# Script_stash

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  mount.md  pyproject.toml
Kubernetes/: init.md  install.txt
Kubernetes/media_server/: instructions.md  my-values.yaml  storage.yml
Kubernetes/resources/helpers/: custom-resouces.yaml  sa-dashboard.yml
Kubernetes/resources/manifests/: easymed.yml
home_assistant/: custom_remote.yaml  docker-compose.yml
ip_retrieval/: pyproject.toml  retrieve.py
mediaserver/: docker-compose-backup.yml  docker-compose.yml  podman-compose.yml
mediaserver/scripts/: baki_grabbler_rename.py  berserk_rename.py  bleach_season_fix.py  ffmpeg_encode.py  gintama_rename.py  kids_shows_renames.py  manaul sqlite3.txt  pj_masks_readd.py  pj_masks_season2.ipynb  rename_one_pace.py  spidey_rename.py  starvs_evil.ipynb
notes/: secure_folder.md  wireguard.md
pihole/: docker-compose.yaml
pre-commit_commands/: uv-sync.sh
reset/: docker.md  fstab.txt  samba.md
watchtower/: docker-compose.yml
wireguard/: client_create.sh  my_client_create.sh
