[project]
name = "script-stash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moviepy>=2.2.1",
    "pre-commit>=4.5.0",
]
[project.scripts]
fetch_ip = "ip_retrieval.retrieve:fetch_ip"

[tool.ruff]
line-length = 150
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["ip_retrieval"]
