[project]
name = "script-stash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "moviepy>=2.2.1",
    "pandas>=3.0.0",
    "pre-commit>=4.5.0",
    "rich>=14.3.3",
    "rich-argparse>=1.7.2",
]
[project.scripts]
fetch_ip = "ip_retrieval.retrieve:fetch_ip"
encode_show = "mediaserver.scripts.ffmpeg_encode:main"

[tool.ruff]
line-length = 150
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["ip_retrieval","mediaserver"]
